--- a/MvcProjeKampi/Web.config
+++ b/MvcProjeKampi/Web.config
@@ -29,7 +29,9 @@
 			</providers>
 		</roleManager>
 	</system.web>
-	
+	<connectionStrings>
+		<add name="Context" connectionString="data source=DESKTOP-HPVMU46\SQLEXPRESS; initial catalog=DbMvcKamp; integrated security= true;" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
